# optimizations

./: .gitignore  Cargo.toml  mk_submission.sh
examples/: add1.dbk  args.dbk  arith.dbk  array_cyclic_tree.dbk  array_empty.dbk  assert_kept.dbk  assert_removed.dbk  assert_unused_error.dbk  bb.dbk  branch.dbk  call.dbk  extern_big_nine.dbk  free.dbk  let_dupe.dbk  live_br.dbk  live_lift.dbk  live_loop.dbk  local_big_eight.dbk  local_non_tail_call.dbk  mov_cycles.dbk  non_tail_factorial.dbk  out_of_bounds.dbk  overflow3.dbk  peano.dbk  pow.dbk  print.dbk  spill_args.dbk  spill_var.dbk  split_4_regs.dbk  split_dup.dbk  stress.dbk  unused.dbk  unused_bp.dbk  unused_fp.dbk  unused_var.dbk  used.dbk  used_actually.dbk
examples/assertions/: array.dbk  array.ssa  extern0.dbk  extern0.ssa  fact.dbk  fact.ssa  loop1.dbk  loop1.ssa  simple_add.dbk  simple_add.ssa
examples/graphs/: chain.dbk  chain.graph  if.dbk  if.graph  itail_reuse.dbk  itail_reuse.graph  param.dbk  param.graph
runtime/: common.rs  extensions.rs  stub.rs
scripts/: manual.sh  time.py
src/: ana.rs  asm.rs  ast.rs  backend.rs  cli.rs  compile.rs  frontend.rs  identifiers.rs  interp.rs  lib.rs  main.rs  middle_end.rs  parser.lalrpop  parser.rs  pretty.rs  runner.rs  ssa.rs  txt.rs  types.rs
tests/: ana.rs  examples.rs  graph_parser.lalrpop  graph_parser.rs
